--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ matplotlib>=3.7.1
 scipy>=1.10.1
 pyaudio>=0.2.13
 pydub>=0.25.1
-pyrtlsdr~=0.3.0 
-pyrtlsdrlib~=0.0.2
+pyrtlsdr>=0.3.0 
+pyrtlsdrlib>=0.0.2
